syntax = "proto3";

option csharp_namespace = "ToDoApp.Server.GRPC";

package todo;
import "google/protobuf/timestamp.proto";

service ToDo {
  rpc GetToDoList (GetToDoListRequest) returns (GetToDoListReply);
}

message GetToDoListRequest {
  string username = 1;
}

message GetToDoListReply {
  repeated ToDoView ToDoList = 1;
}

message ToDoView {
	string description = 1;
	int32 status = 2;
	google.protobuf.Timestamp CreatedDate = 3;
}
